--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.0",
+    "d3": "^6.2.0",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.5.2",
@@ -16,7 +18,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-feather": "^2.0.8",
+    "react-force-graph-2d": "^1.18.1",
+    "react-helmet": "^6.1.0",
+    "react-use": "^15.3.4",
+    "topojson": "^3.0.2"
   },
   "devDependencies": {
     "prettier": "2.1.2"
